# d3_evaluation_pipeline

./: .gitignore  README.md  deepstarr.py  main.py  pyproject.toml  requirements.txt  setup.py
configs/: base_config.yaml  deepstarr_config.yaml
core/: attribution_analysis.py  functional_similarity.py  motif_analysis.py
core/compositional/: attribution_consistency.py  motif_cooccurrence.py  motif_enrichment.py
core/functional/: cond_gen_fidelity.py  frechet_distance.py  predictive_dist_shift.py
core/sequence/: discriminability.py  kmer_spectrum_shift.py  percent_identity.py
results/deepstarr/: intermediate_functional_similarity_2025-07-27_22-12-47.pkl  intermediate_sequence_similarity_2025-07-27_22-17-16.pkl
scripts/: generate_attribution_maps.py  run_custom_evaluation.py  run_full_pipeline.py  run_single_evaluation.py
src/data/: data_utils.py
src/evaluators/: __init__.py  base_evaluator.py  compositional_similarity.py  discriminability_similarity.py  functional_similarity.py  sequence_similarity.py
src/models/: discriminability_classifier.py  model_utils.py
src/utils/: common_utils.py  config_utils.py
training/: EvoAug_run_train.py  finetune_run_train.py
utils/: batch_helpers.py  helpers.py  seq_evals_func_motifs.py  seq_evals_improved.py  seq_evals_improved_deprecated.py
